--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@tabler/icons-react": "^3.6.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
     "next": "14.2.4",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
